<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Configuración</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblPrueba">Hola Mundo de Alberto Paico</string>
    <string name="hello">Hello World!</string>
    <string name="app_name">Ojo Vial</string>
    <string name="lblTitleLogin">Bienvenido a Ojo Vial</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="logoDescription">Logo Ojo Vial</string>
    <string name="password_hint">Contraseña</string>
    <string name="sigIn">Iniciar sesión</string>
    <string name="registration"><u>Registrarse</u></string>
    <string name="forgetPassword">¿Olvidaste tu Contraseña?</string>
    <string name="nameRegister">Nombres</string>
    <string name="lastNameRegister">Apellidos</string>
    <string name="dniRegister">Documento de Identidad (DNI)</string>
    <string name="chkAdult">Soy mayor de edad (18).</string>
    <string name="chkAcceptTerm">Acepto los Términos y Condiciones.</string>
    <string name="btnRegister">Registrarse</string>
    <string name="btnDenounce">Denunciar</string>
    <string name="btnMyDenounce">Mis denuncias</string>
    <string name="btnMyInformation">Mis datos</string>
    <string name="btnRecomendation">Recomendaciones</string>
    <string name="erroremail_pwd">Invalid e-mail or password.</string>
    <string name="next">Siguiente</string>
    <string name="lblTituloFotos">Paso 1.</string>
    <string name="lblDescripTituloFotos">Tome las fotos necesarias para la denuncia.</string>
    <string name="fieldRequired">Campo requerido</string>
    <string name="welcomeMessagesTitle">Registro realizado con éxito</string>
    <string name="welcomeMessagesBody">Inicie sesión y comience a regitrar sus denuncias</string>
    <string name="welcomeMessagesThankYou">!Gracias por colaborar con Ojo Vial¡</string>
    <string name="emailExit">El correo ya se encuentra registrado. Por favor ingrese otro.</string>
    <string name="validationFail">El password es incorrecto.</string>
    <string name="watingLogin">Por favor espere estamos validando su cuenta.</string>
    <string name="emailNotExit">El correo no se encuentra registrado en nuestra aplicación. Ingrese en "Crear Cuenta".</string>
    <string name="lblNumberPlate">Ingrese número de placa de vehículo</string>
    <string name="lblAditionalComment">Comentarios Adicionales</string>
    <string name="lblTitleStep2Register">Paso 2.</string>
    <string name="lblDescripTituloStep2">Información complementaria.</string>
    <string name="btnRegistrar">Registrar Denuncia</string>
    <string name="successTitle">Denuncia registrada</string>
    <string name="strBodyMessageSuccess">El identificador de tu denuncia es :</string>
    <string name="btnStrOtherComplaint">Menú principal</string>
    <string name="strIdAttention">El id de la atención</string>
    <string name="strConfigGPS">No se ha configurado el GPS. Porfavor hacerlo antes de continuar.</string>
    <string name="errorInGeneral">Ocurrio un error interno por favor revisar.</string>
    <string name="errorSaveComplaint">#1 Ocurrio un error cuando grabo la información.</string>
    <string name="errorSaveImage">#2 Ocurrio un error cuando se subian las fotos.</string>
    <string name="lblDireccion">Dirección : </string>
    <string name="lblInsertDireccion">Ingrese dirección</string>
    <string name="strMessagesCodeResponse">Su número denuncia es : </string>
    <string name="emailFormat">Formato de Correo Incorrecto</string>
    <string name="strUploadOnePhoto">Tiene que tomar por lo menos una foto.</string>
    <string name="passwordConfirm_hint">Repetir Contraseña</string>
    <string name="lblMessagesPassowrdNotCoincided">Las contraseñas no son iguales.</string>
	<string name="strPhoto1">1..</string>
	
    <string name="loading">Cargando...</string>
    <string name="loadingValidationUser">Validando... Por favor espere.</string>
    <string name="loadingRegisterUser">Registrando sus datos...</string>
    <string name="loadingSaveComplaint">Estamos registrando. Por favor espere.</string>
    <string name="loadingProcessPhoto">Procesando Fotos...Por favor espere.</string>
    <string name="loadingProcessDistrict">Cargando Distritos...Por favor espere.</string>
    <string name="loadingProcessAditional">Procesando...Por favor espere.</string>
    <string name="loadingNextPageFromPhotos">Estamos procesando...Por favor espere.</string>
    
    <string name="messagesDistrictError">Debe Seleccionar un distrito.</string>
    <string name="titleAdvertencia">Advertencia</string>
    <string name="messagesOptionOnlyForWeb">Actualmente solo se encuentra disponible desde la web.\nPor favor ingresar desde un navegador a \nwww.ojovial.com</string>
	<string name="titleError">Error de Validación.</string>
	<string name="messagesValidationSelectDistrict">Por favor tiene que Seleccionar un Distrito \n Gracias.</string>
	<string name="messagesValidationProccessImage">Por favor espere estamos procesando las fotos para adjuntarlas a la denuncia, solo unos segundos más. \n Gracias.</string>
	<string name="messagesProcessDenounce">Por favor, espere estamos registrando su denuncia.</string>
	<string name="successTakePhoto">La foto fue tomada con éxito.</string>
	<string name="problemTakePhoto">Hubo un problema para guardar la imagen.</string>
	<string name="strLblAutomaticAddress">Dirección automática</string>
	<string name="strLblShowGPS">Coordenadas GPS (</string>
	<string name="messagesGPSNoFound">Lo sentimos, no podemos obtener su dirección debe ser un problema de version de Android. \n Disculpe las molestias.</string>
	
	
	<string name="titleGPS">GPS - Configuración</string>
	<string name="messageGPSNotEnabled">GPS no esta habilitado. ¿Desea ir a las opciones del Menú?</string>
	
	
	
</resources>