<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dip" >

    <!-- Email Label -->

    <EditText
        android:id="@id/idRegisterEmail"
        style="@style/inptLinedStyleOjoVial"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:singleLine="true" />

    <!-- Password Label -->

    <EditText
        android:id="@id/idRegisterPassword"
        style="@style/inptLinedStyleOjoVial"
        android:hint="@string/password_hint"
        android:maxLength="10"
        android:password="true"
        android:singleLine="true" />

    <!-- Password Label -->

    <EditText
        android:id="@id/idRegisterPasswordConfirm"
        style="@style/inptLinedStyleOjoVial"
        android:hint="@string/passwordConfirm_hint"
        android:maxLength="10"
        android:password="true"
        android:singleLine="true" />

    <!-- Name Label -->

    <EditText
        android:id="@id/idNameUser"
        style="@style/inptLinedStyleOjoVial"
        android:hint="@string/nameRegister"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:singleLine="true" />

    <!-- Last Name Label -->

    <EditText
        android:id="@id/idLastNameUser"
        style="@style/inptLinedStyleOjoVial"
        android:hint="@string/lastNameRegister"
        android:inputType="textEmailAddress"
        android:maxLength="60"
        android:singleLine="true" />

    <!-- DNI Label -->

    <EditText
        android:id="@id/idDniUser"
        style="@style/inptLinedStyleOjoVial"
        android:hint="@string/dniRegister"
        android:inputType="number"
        android:maxLength="8"
        android:singleLine="true" />

    <!-- Adult CheckBox -->

    <CheckBox
        android:id="@id/idChkAdult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="2dip"
        android:hint="@string/chkAdult" />
    <!-- Accept Termins and Conditions CheckBox -->

    <CheckBox
        android:id="@id/idChkAcceptTerm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="2dip"
        android:hint="@string/chkAcceptTerm" />

    <!-- Register button -->

    <Button
        android:id="@id/idBtnRegister"
        style="@style/btnStyleOjoVial"
        android:onClick="onClickSaveUser"
        android:text="@string/btnRegister"
        android:textAllCaps="false" />

</LinearLayout>