<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnLyFormLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip" >

    <!-- Logo Start -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/logo_ov" />
    <!-- Logo Ends -->


    <!-- Email Label -->

    <EditText
        android:id="@+id/idLoginEmail"
        style="@style/inptLinedStyleOjoVial"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="30" />

    <!-- Password Label -->

    <EditText
        android:id="@+id/idLoginPassword"
        style="@style/inptLinedStyleOjoVial"
        android:hint="@string/password_hint"
        android:maxLength="10"
        android:password="true" />

    <!-- Login button -->

    <Button
        android:id="@+id/ok_button"
        style="@style/btnStyleOjoVial"
        android:onClick="onOkClick"
        android:text="@string/sigIn"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/link_to_register"
        style="@style/btnStyleOjoVialWhite"
        android:onClick="onClickRegisterUser"
        android:text="@string/btnRegister"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <!-- Login Form Ends -->

</LinearLayout>