<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnLyPrincipalScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip" >

    <!-- Logo Start -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/logo_ov" />
    <!-- Logo Ends -->


    <!-- Denounce button -->

    <Button
        android:id="@id/idBtnDenounce"
        style="@style/btnStyleOjoVial"
        android:onClick="onClickRedirectCamera"
        android:text="@string/btnDenounce"
        android:textAllCaps="false" />

    <!-- My Denounce button -->

    <Button
        android:id="@id/idBtnMyDenounce"
        style="@style/btnGreyStyleOjoVial"
        android:onClick="onClickMyDenounce"
        android:text="@string/btnMyDenounce"
        android:textAllCaps="false" />

    <!-- My Information button -->

    <Button
        android:id="@id/idBtnMyInformation"
        style="@style/btnGreyStyleOjoVial"
        android:onClick="onClickMyInformation"
        android:text="@string/btnMyInformation"
        android:textAllCaps="false" />

    <!-- Recomendation button -->

    <Button
        android:id="@id/idBtnRecomendation"
        style="@style/btnGreyStyleOjoVial"
        android:onClick="onClickRecommendation"
        android:text="@string/btnRecomendation"
        android:textAllCaps="false" />

</LinearLayout>