<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lnlyRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dip" >

            <!-- Email Label -->

            <EditText
                android:id="@id/idRegisterEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="2dip"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:singleLine="true" />

            <!-- Password Label -->

            <EditText
                android:id="@id/idRegisterPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="2dip"
                android:hint="@string/password_hint"
                android:maxLength="10"
                android:password="true"
                android:singleLine="true" />

            <!-- Password Label -->

            <EditText
                android:id="@id/idRegisterPasswordConfirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="2dip"
                android:hint="@string/passwordConfirm_hint"
                android:maxLength="10"
                android:password="true"
                android:singleLine="true" />

            <!-- Name Label -->

            <EditText
                android:id="@id/idNameUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="2dip"
                android:hint="@string/nameRegister"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:singleLine="true" />

            <!-- Last Name Label -->

            <EditText
                android:id="@id/idLastNameUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="2dip"
                android:hint="@string/lastNameRegister"
                android:inputType="textEmailAddress"
                android:maxLength="60"
                android:singleLine="true" />

            <!-- DNI Label -->

            <EditText
                android:id="@id/idDniUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="2dip"
                android:hint="@string/dniRegister"
                android:inputType="number"
                android:maxLength="8"
                android:singleLine="true" />

            <!-- Adult CheckBox -->

            <CheckBox
                android:id="@id/idChkAdult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="2dip"
                android:hint="@string/chkAdult" />
            <!-- Accept Termins and Conditions CheckBox -->

            <CheckBox
                android:id="@id/idChkAcceptTerm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="2dip"
                android:hint="@string/chkAcceptTerm" />

            <!-- Register button -->

            <Button
                android:id="@id/idBtnRegister"
                style="@style/btnStyleBlackpearl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="onClickSaveUser"
                android:text="@string/btnRegister" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnLyProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="vertical"
            android:padding="10dip"
            android:background="#80000000">
                
            <ProgressBar
				android:id="@id/progressBar"
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" />
            
            <TextView
		        android:id="@+id/txtMessages"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/loadingRegisterUser"
		        style="@style/lblStyleMessagesProcess"/>
         </LinearLayout>
    </RelativeLayout>

</ScrollView>