<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="4dip"
                android:contentDescription="@string/logoDescription"
                android:src="@drawable/success" />
            <!-- Logo Ends -->


            <!-- Mensaje de extito -->

            <TextView
                android:id="@+id/lblTitleWelcome"
                style="@style/lblStyleTitulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/welcomeMessagesTitle" />

            <TextView
                android:id="@+id/lblBodyWelcome"
                style="@style/lblStyleSubTituloLstVw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/welcomeMessagesBody" />

            <TextView
                android:id="@+id/lblFootWelcome"
                style="@style/lblStyleTitulo2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/welcomeMessagesThankYou" />

            <!-- Redirect to login -->

            <Button
                android:id="@id/ok_button"
                style="@style/btnStyleBlackpearl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="onOkClick"
                android:text="@string/sigIn" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>