<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris" >

        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="#ffffff" >
        </LinearLayout>
        <!-- Footer Ends -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip"
            android:background="#ffffff" >

            <!-- Logo Start -->

                 <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logoDescription"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="20dip"
                    android:src="@drawable/logo_ov" />
            <!-- Logo Ends -->
            
            <!-- Denounce button -->
            <Button
                android:id="@id/idBtnDenounce"
                style="@style/btnStyleOjoVial"
                android:onClick="onClickRedirectCamera"
                android:text="@string/btnDenounce"
                android:textAllCaps="false" />
            
             <!-- My Denounce button -->
            <Button
                android:id="@id/idBtnMyDenounce"
                style="@style/btnGreyStyleOjoVial"
                android:onClick="onClickMyDenounce"
                android:text="@string/btnMyDenounce"
                android:textAllCaps="false" />
            
            
             <!-- My Information button -->
            <Button
                android:id="@id/idBtnMyInformation"
                style="@style/btnGreyStyleOjoVial"
                android:onClick="onClickMyInformation"
                android:text="@string/btnMyInformation"
                android:textAllCaps="false" />
            
            
            <!-- Recomendation button -->
            <Button
                android:id="@id/idBtnRecomendation"
                style="@style/btnGreyStyleOjoVial"
                android:onClick="onClickRecommendation"
                android:text="@string/btnRecomendation"
                android:textAllCaps="false" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>