<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris" >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logoDescription"
                android:src="@drawable/finalsuccess" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >
        </LinearLayout>
        <!-- Footer Ends -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >
            <TextView
                android:id="@+id/lblTitleSuccess"
                style="@style/lblStyleTitulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/successTitle" />
            
            <TextView
                android:id="@+id/lblBodyWelcome"
                style="@style/lblStyleSubTituloLstVw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/strBodyMessageSuccess" />
            
            <TextView
                android:id="@id/idTxtIdCode"
                style="@style/lblStyleSubTituloLstVw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"/>
            
            <TextView
                android:id="@+id/lblFootWelcome"
                style="@style/lblStyleTitulo2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/welcomeMessagesThankYou" />
            
             <!-- Redirect to login -->

            <Button
                android:id="@id/ok_button"
                style="@style/btnStyleBlackpearl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="onMakeOtherComplaint"
                android:text="@string/btnStrOtherComplaint" />
            
        </LinearLayout>
    </RelativeLayout>

</ScrollView>