<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" 
            android:padding="10dip">
            
                <!-- Logo Start -->

                 <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logoDescription"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="4dip"
                    android:src="@drawable/logo_papeletas" />
                <!-- Logo Ends -->
               

                <!-- Email Label -->

                <EditText
                    android:id="@id/idLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="2dip"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:singleLine="true" />

                <!-- Password Label -->

                <EditText
                    android:id="@id/idLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="2dip"
                    android:hint="@string/password_hint"
                    android:maxLength="10"
                    android:password="true"
                    android:singleLine="true" />

                <!-- Link to Registration Screen -->
                <!-- <TextView -->
                <!-- android:id="@id/link_forget_password" -->
                <!-- style="@style/lnkStyle2" -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_marginBottom="10dip" -->
                <!-- android:layout_marginTop="10dip" -->
                <!-- android:text="@string/forgetPassword" /> -->
                <!-- Link to Registration Screen -->


                <!-- Login button -->

                <Button
                    android:id="@id/ok_button"
                    style="@style/btnStyleBlackpearl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="2dip"
                    android:onClick="onOkClick"
                    android:text="@string/sigIn" />

                <Button
                    android:id="@id/link_to_register"
                    style="@style/btnStyleLeadpearl"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="2dip"
                    android:onClick="onClickRegisterUser"
                    android:text="@string/registration" />
            <!-- Login Form Ends -->
        </LinearLayout>
    </RelativeLayout>

</ScrollView>